[package]
name = "reqq"
version = "0.1.0"
authors = ["Seth Etter <mail@sethetter.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "3.3.0"
serde = "1.0.114"
serde_json = "1.0.57"
clap = "2.33.3"
anyhow = "1.0.32"
walkdir = "2.3.1"
httparse = "1.3.4"
regex = "1.3.9"
